Correct alignment and placement of the elements

--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,40 @@
+
+
 *
 {
     box-sizing: border-box;
     margin: 0;
     padding:0;
 }
+
+html,body
+{
+    height:100%;
+    overflow: auto;
+}
+#content
+{
+    background-color: rgb(111, 243, 111);
+    height:100%;
+    width:100%;
+    position: absolute;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
 .header
 {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: #f26419;
-    margin: 2rem;
-
+    background: #f5cef4;
+    gap: 5rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 .floatingBlock
@@ -22,4 +44,15 @@
     justify-content: center;
     margin: 3rem;
     gap: 1rem;
+    border-radius: 2rem;
+    background-color: antiquewhite;
+    padding: 2rem;
+}
+
+
+.buttoncontainer
+{
+    margin: 1px;
+    display: flex;
+    gap: 2rem;
 }
